# SpotMicro

./: .clang-tidy  Angle.hpp  CMakeLists.txt  FootTrajectory.hpp  KinematicExceptions.hpp  Kinematics.cpp  Kinematics.hpp  LICENSE.txt  LegConfig.hpp  LegPose.cpp  LegPose.hpp  MathUtil.hpp  README.md  RobotConfig.hpp  RobotHW.cpp  RobotHW.hpp  Servo.hpp  ServoController.cpp  ServoController.hpp  StraightTrajectory.cpp  StraightTrajectory.hpp  TrajectoryRunner.cpp  TrajectoryRunner.hpp  Vector3d.hpp  VectorXZ.hpp  expect.cpp  expect.hpp  main.cpp
test/: angleCompare.hpp  kinematicsTest.cpp  mathTest.cpp  testMain.cpp
